--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,12 @@
 body {
   height: 100vh;
 }
-
+p,h1,h2,h3,h4,h5,h6,span,.btn{
+  font-family: 'Nunito Sans', sans-serif ;
+}
+.website_font {
+  font-family: 'Nunito Sans', sans-serif ;
+}
 .ql-editor {
   font-size: 1.05rem;
 }
@@ -40,9 +45,32 @@ body {
   color: red;
 }
 .post_image {
-  display: flex; 
+  display: flex;
   align-items: center;
+  flex-direction: column;
 }
 .margin_bottom {
   margin-bottom: 10px;
+}
+.cpy {
+  font-family: "Nunito Sans", sans-serif;
+  text-align: center;
+  font-size: 12px;
+  margin-top: 4px;
+  margin-bottom: 0px;
+}
+.p_img {
+  width: 100%;
+}
+.margin_top {
+margin-top: 16px;
+}
+
+.tagline_spacing {
+  padding-top: 36px;
+  margin-top: 36px;
+}
+.title_color {
+  color: rgb(47, 167, 47);
+  font-weight: bold;
 }
